src/objects/DEPRECATED_Sustainers_Upgrade__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>DEPRECATED Sustainers Upgrade</relationshipLabel>
        <relationshipName>DEPRECATED_Sustainers_Upgrade</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DEPRECATED Sustainers Upgrade</relationshipLabel>
        <relationshipName>DEPRECATED_Sustainers_Upgrade</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Donation_ID__c</fullName>
        <label>Donation ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Failure_Flag__c</fullName>
        <label>Failure Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_ID__c</fullName>
        <label>Form ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_URL__c</fullName>
        <label>Form URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Initial_Referrer__c</fullName>
        <label>Initial Referrer</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market_Source__c</fullName>
        <label>Market Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Donations__c</fullName>
        <label>Recurring Donations</label>
        <referenceTo>npe03__Recurring_Donation__c</referenceTo>
        <relationshipLabel>DEPRECATED Sustainers Upgrade</relationshipLabel>
        <relationshipName>DEPRECATED_Sustainers_Upgrade</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <label>Referrer</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Flag__c</fullName>
        <label>Status Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UTM_campaign__c</fullName>
        <label>UTM_campaign</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_content__c</fullName>
        <label>UTM_content</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_medium__c</fullName>
        <label>UTM_medium</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_source__c</fullName>
        <label>UTM_source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_term__c</fullName>
        <label>UTM_term</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upgrade_Amount__c</fullName>
        <label>Upgrade Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Agent__c</fullName>
        <label>User Agent</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <description>Drupal User ID</description>
        <label>User ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DEPRECATED Sustainers Upgrade</label>
    <nameField>
        <label>OLD Sustainers Upgrade Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DEPRECATED Sustainers Upgrade</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>